--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "crypto-browserify": "^3.12.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.10.0",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.394.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-media-recorder": "^1.6.6",
