--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/preset-react": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@ionic/react": "^8.2.2",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@nivo/bar": "^0.87.0",
@@ -27,12 +28,15 @@
     "emoji-picker-react": "^4.10.0",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
+    "ionicons": "^7.4.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.394.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
