--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nivo/core": "^0.87.0",
     "@nivo/geo": "^0.87.0",
     "@nivo/line": "^0.87.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,6 +39,7 @@
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-media-recorder": "^1.6.6",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
