--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.1.4",
     "web-vitals": "^2.1.4",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
