--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "aws-sdk": "^2.1641.0",
     "axios": "^1.7.2",
     "babel-loader": "^9.1.3",
-    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "crypto-browserify": "^3.12.0",
     "emoji-mart": "^5.6.0",
@@ -74,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "ajv": "^7.2.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
