--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-media-recorder": "^1.6.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
