--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "ajv": "^7.2.4",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
