--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@nivo/core": "^0.87.0",
     "@nivo/geo": "^0.87.0",
     "@nivo/line": "^0.87.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,6 +28,7 @@
     "emoji-picker-react": "^4.10.0",
     "firebase": "^10.12.2",
     "formik": "^2.4.6",
+    "gapi-script": "^1.2.0",
     "ionicons": "^7.4.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.394.0",
@@ -34,6 +36,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^6.1.6",
